<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Beztooth" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <com.beztooth.UI.Util.BezButton
            android:id="@+id/scanButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="25dp"
            android:background="@drawable/select_border"
            android:text="@string/scan"
            android:textColor="@color/BezBlue"
            android:textSize="36sp"
            android:textStyle="bold" />
        <com.beztooth.UI.Util.BezButton
            android:id="@+id/syncClockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="25dp"
            android:background="@drawable/select_border"
            android:text="@string/sync_clock"
            android:textColor="@color/BezBlue"
            android:textSize="36sp"
            android:textStyle="bold" />
        <com.beztooth.UI.Util.BezButton
            android:id="@+id/thermometerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="25dp"
            android:background="@drawable/select_border"
            android:text="@string/thermometer"
            android:textColor="@color/BezBlue"
            android:textSize="36sp"
            android:textStyle="bold" />
        <com.beztooth.UI.Util.BezButton
            android:id="@+id/garageDoorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="25dp"
            android:background="@drawable/select_border"
            android:text="@string/garagedoor"
            android:textColor="@color/BezBlue"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>