<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Marquee">
        <ProgressBar
            android:id="@+id/scanProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="800px"
                android:background="@drawable/select_border_small"
                android:gravity="top"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textMultiLine"
                android:maxLength="1995"
                android:overScrollMode="ifContentScrolls"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:hint="Enter message ..."
                />
            <com.beztooth.UI.Util.BezButton
                android:id="@+id/send_button"
                android:background="@drawable/select_border_medium"
                android:layout_width="120dp"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/BezBlue"
                android:text="@string/send_text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="10px"
                android:textSize="18sp"
                android:text="@string/brightness"
                />
            <SeekBar
                android:id="@+id/brightness_slider"
                style="@style/BezSeekBar"
                android:thumb="@drawable/seekbar_thumb"
                android:layout_width="match_parent"
                android:min="0"
                android:max="5"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:padding="10px"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="10px"
                android:textSize="18sp"
                android:text="@string/speed"
                />
            <SeekBar
                android:id="@+id/speed_slider"
                style="@style/BezSeekBar"
                android:thumb="@drawable/seekbar_thumb"
                android:layout_width="match_parent"
                android:min="0"
                android:max="5"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:padding="10px"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>